1.1rc1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
- Refactored to use the new ezcBaseOptions class.

- Fixed bug #8301: New bug: ezcCacheStorageFile::search and delete do not work with
  identifiers containing slashes


1.1beta1 - Tuesday 09 May 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature request 7841: Added possibility to provide a TTL of
  false to  make cache items last endlessly.


1.0.1 - Monday 27 February 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed bug #7830: ezcCacheStorageFile::generateIdentifier is using HFS
  directory separator (colon) in filename. It now uses a "=". Attention: This
  invalidates all cache files when upgrading. You should purge the cache
  manually.


1.0 - Monday 30 January 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed unreported bug: ezcCacheStorageFile::countDataItems() was intended to
  return int (number of cache items matching certain criteria) but returned
  bool.


1.0rc1 - Monday 16 January 2006
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Added value checks for options provided to ezcCacheStorage classes.

- Changed exception behavior. All errors will now throw a different exception
  class.


1.0beta2 - Friday 23 December 2005
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Changed method names:

  * ezcCacheStorage::hasData() to countDataItems().
  * ezcCacheStorage::remainingLifeTime() to getRemainingLifeTime().

- Fixed bug #7469: "Missing PHP closing tags in cache file".


1.0beta1 - Friday 25 November 2005
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Initial release of this package.